--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <title>title</title>
+    <style>
+      * {
+        background: white;
+        padding: 0;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
 
