--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>title</title>
     <style>
-      * {
-        background: white;
+      body * {
+        background: pink;
         padding: 0;
         margin: 0;
+        outline: 1px dashed red;
       }
     </style>
   </head>
