--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   <body>
 
     <div id="old">OLD ONE</div>
+    <div id="container"></div>
   <script src="./dist/main.js" type="text/javascript"></script>
   </body>
 </html>
