--- a/examples/index.html
+++ b/examples/index.html
@@ -20,6 +20,6 @@
       </div>
     </div>
 
-    <script src="../dist/examples.js" type="text/javascript"></script>
+    <script src="/examples.js" type="text/javascript"></script>
   </body>
 </html>
