add support for `slot`s

--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
   <body>
     <div id="root">
       <div hidden>
-        <p id="server-side-rendered-html">need more help? call <a href="tel:123456">0123456</a></p>
+        <p id="server-side-rendered-html">need more help? call <a href="tel:(48)15162342">(48) 15 16 23 42</a></p>
       </div>
     </div>
 
